# llm-engineering-lab

./: .gitignore  pyproject.toml
generate_synthetic_data/: synthetic_data_generator.ipynb
transcribe_recordings/: main.py  transcription_summarization.ipynb  video_transcription.ipynb
