[project]
name = "llm-engineering-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=6.4.0",
    "openai>=2.16.0",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.1",
    "requests>=2.33.0",
    "torch>=2.10.0",
]
